# crates_rofio

./: .gitignore  PKGBUILD  README.md  organize.sh
pkg/crates_rofio/: .BUILDINFO  .MTREE  .PKGINFO
pkg/crates_rofio-debug/: .BUILDINFO  .MTREE  .PKGINFO
pkg/crates_rofio-debug/usr/src/debug/crates_rofio/crates_rofio-0.1.0/src/: notification.rs
src/: cache.rs  config.rs  crate_fetch.rs  main.rs  rofi.rs
src/crates_rofio-0.1.0/: 2
src/crates_rofio-0.1.0/src/: main.rs  rofi_query.sh
src/crates_rofio-0.1.1/: PKGBUILD  crates_rofio
src/crates_rofio-0.1.1/src/: crate_fetch.rs  dead_code.rs
src/crates_rofio-0.1.1/src/crates_rofio-0.1.0/: PKGBUILD
src/crates_rofio-0.1.1/src/crates_rofio-0.1.0/src/: types.rs
src/crates_rofio-0.1.2/: PKGBUILD
src/crates_rofio-0.1.2/src/: main.rs
src/crates_rofio-0.1.2/src/crates_rofio-0.1.0/: README.md
src/crates_rofio-0.1.2/src/crates_rofio-0.1.1/src/: main.rs
src/crates_rofio-0.1.2/src/crates_rofio-0.1.1/src/crates_rofio-0.1.0/: Cargo.toml
src/crates_rofio-0.1.2/src/crates_rofio-0.1.1/src/crates_rofio-0.1.0/src/: config.rs  rofi.rs
