[package]
name = "crates_rofio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0.1"
dirs = "5.0.1"
json = "0.12.4"
reqwest = {version = "0.11.24", features=["json"]}
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
tokio = {version = "1.36.0", features = ["rt-multi-thread"]}
toml = "0.8.10"
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features=["env-filter"]}
webbrowser = "0.8.12"
